src/objects/Apttus__DocumentLockSubscription__c.object
<CustomObject>
    <description>Stores locked document details and user id of the subscribers to send notifications to when the locked document becomes available.</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Id of the locked document.</description>
        <inlineHelpText>Agreement Id of the locked document.</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Document Lock Subscriptions</relationshipLabel>
        <relationshipName>Document_Lock_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Version Id of the locked document.</description>
        <inlineHelpText>Version Id of the locked document.</inlineHelpText>
        <label>Document Version</label>
        <referenceTo>Apttus__DocumentVersion__c</referenceTo>
        <relationshipLabel>Document Lock Subscriptions</relationshipLabel>
        <relationshipName>Document_Lock_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Id of the subscriber to receive document availability notification.</description>
        <inlineHelpText>User Id of the subscriber to receive document availability notification.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Lock_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Lock Subscription</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Lock Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Lock Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>